script function works

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Can You Solve This?</h1>
 
     <h3>1. You can use the word "buffalo" in how many ways?</h3>
-    <button onclick="check()"> 1 </button>
-    <button onclick="check()"> 30 </button>
-    <button id="a" onclick="check()"> 7 </button>
-    <button id="c" onclick="check()">There's different ways to use that word?</button>
+    <button onclick="incorrect()"> 1 </button>
+    <button onclick="incorrect()"> 30 </button>
+    <button onclick="correct()"> 7 </button>
+    <button onclick="funny()">There's different ways to use that word?</button>
 
 <script src="script.js"></script>
 </body>
